static/output/stdout_1234.txt
Traceback (most recent call last):
  File "c:\Users\Hello\OneDrive\Code Tutorial\Python\Co_ganh\game_manager.py", line 105, in activation
    UserBot = __import__("static.botfiles.botfile_"+session_name, fromlist=[None])
  File "c:\Users\Hello\OneDrive\Code Tutorial\Python\Co_ganh\static\botfiles\botfile_1234.py", line 86
    for mx, my in ((1,0), (-1,0), (0,1), (0,-1))
                                                ^
SyntaxError: expected ':'
